--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -86,3 +86,34 @@
   font-size: 1.2rem;
   margin-top: 0.5rem;
 }
+
+.submitButton {
+  transition: all 0.3s ease-in-out;
+  margin-top: 1.6rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1.5rem;
+  min-width: 15rem;
+  background-color: blue;
+  color: white;
+  height: 4.6rem;
+  border-radius: 10rem;
+}
+
+.submitButton:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+@media screen and (hover: hover) {
+  .submitButton:has(:not(:disabled)):hover {
+    background-color: rgb(0, 0, 90);
+  }
+}
+
+@media screen and (hover: active) {
+  .submitButton:has(:not(:disabled)):active {
+    background-color: rgb(0, 0, 90);
+  }
+}
