--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   content: "";
   background: linear-gradient(
     to top,
@@ -26,9 +26,29 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   content: "";
-  background: url("/sectionBG.jpg") center/cover no-repeat;
+  background: radial-gradient(
+      circle at 20% 20%,
+      rgba(236, 72, 153, 0.15) 0%,
+      transparent 10%
+    ),
+    radial-gradient(
+      circle at 80% 80%,
+      rgba(219, 39, 119, 0.12) 0%,
+      transparent 10%
+    ),
+    radial-gradient(
+      circle at 50% 10%,
+      rgba(190, 24, 93, 0.08) 0%,
+      transparent 10%
+    ),
+    radial-gradient(
+      circle at 10% 90%,
+      rgba(232, 121, 249, 0.1) 0%,
+      transparent 10%
+    ),
+    #0f0f23;
   z-index: -2;
 }
 
@@ -48,6 +68,16 @@
 
 .matrixChartSectionWrapper {
   width: 100%;
+  display: flex;
+  gap: 6rem;
+  align-items: center;
+  margin-bottom: 6rem;
+}
+
+.ageText {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 2.4rem;
 }
 
 .form {
@@ -115,5 +145,19 @@
 @media screen and (hover: active) {
   .submitButton:has(:not(:disabled)):active {
     background-color: rgb(0, 0, 90);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .matrixChartSectionWrapper {
+    display: block;
+  }
+  .container {
+    padding: 0 3rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 0 1.5rem;
   }
 }
