--- a/src/components/svg-matrix/SvgMatrix.module.scss
+++ b/src/components/svg-matrix/SvgMatrix.module.scss
@@ -7,3 +7,10 @@
   width: 100%;
   height: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .matrixCalcWrapper {
+    width: 100%;
+    margin: 0 auto 4rem;
+  }
+}
