--- a/src/components/lovematrix/Lovematrix.module.scss
+++ b/src/components/lovematrix/Lovematrix.module.scss
@@ -3,9 +3,6 @@
   min-height: 100dvh;
   width: 100%;
   position: relative;
-  justify-content: center;
-  align-items: center;
-  display: flex;
 }
 
 .section::before {
@@ -22,6 +19,19 @@
     rgba(255, 255, 255, 0.9) 100%
   );
   z-index: -1;
+}
+
+.person {
+  text-align: center;
+  font-size: 48px;
+  margin-top: 3.2rem;
+  margin-bottom: 1.8rem;
+}
+
+.fromWrapper {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
 }
 
 .section::after {
@@ -53,54 +63,6 @@
     ),
     #0f0f23;
   z-index: -2;
-}
-
-.btnWrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-top: 2rem;
-
-  @media (min-width: 600px) {
-    flex-direction: row;
-    justify-content: center;
-  }
-}
-
-.mainButton {
-  background-color: #1f2937; // тёмно-серый
-  color: #fff;
-  border: none;
-  padding: 1rem 2rem;
-  border-radius: 8px;
-  font-size: 2.6rem;
-  font-weight: 500;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-
-  &:hover {
-    background-color: #374151;
-  }
-
-  &:active {
-    background-color: #111827;
-  }
-}
-
-.backButton {
-  margin-bottom: 2rem;
-  background: none;
-  color: #1f2937;
-  border: 2px solid #1f2937;
-  padding: 0.6rem 1.2rem;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: all 0.3s ease;
-
-  &:hover {
-    background-color: #f3f4f6;
-  }
 }
 
 .container {
@@ -160,6 +122,7 @@
   font-size: 2.8rem;
   color: #555;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .errorText {
