--- a/src/components/lovematrix/Lovematrix.module.scss
+++ b/src/components/lovematrix/Lovematrix.module.scss
@@ -169,9 +169,87 @@
   .container {
     padding: 0 3rem;
   }
+
+  .input {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 @media screen and (max-width: 480px) {
   .container {
     padding: 0 1.5rem;
+  }
+}
+
+.mobileInput {
+  display: block;
+}
+
+.desktopInput {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .mobileInput {
+    display: none;
+  }
+
+  .desktopInput {
+    display: block;
+  }
+}
+
+@media (max-width: 767px) {
+  .desktopInput[type="date"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    &::-webkit-calendar-picker-indicator {
+      display: none;
+    }
+
+    &::-webkit-inner-spin-button {
+      display: none;
+    }
+  }
+}
+
+.mobileInput {
+  font-size: 16px;
+
+  &::placeholder {
+    color: #999;
+    opacity: 1;
+  }
+
+  &:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
+  }
+}
+
+.inputContainer {
+  position: relative;
+
+  @media (max-width: 767px) {
+    .mobileInput {
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        right: 12px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 16px;
+        height: 16px;
+        background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>')
+          center/contain no-repeat;
+        opacity: 0.5;
+        pointer-events: none;
+      }
+    }
   }
 }
